# stm32-plus-plus

./: .gitignore  .gitmodules  Backup of stm32++.ewd  Backup of stm32++.ewp  CMakeLists.txt  README.md  sources.cmake  stm32++.dep  stm32++.ewd  stm32++.ewp  stm32++.ewp.orig  stm32++.ewt  stm32++.eww  stm32++.qbs  stm32++_IAR_8.ewp  stm32++_IAR_8.eww  stm32++_IAR_9.ewp  stm32++_IAR_9.eww  stm32++_old.eww
doxygen/: Doxyfile  mainpage.md
lib/STM32G0xx_HAL_Driver/: Release_Notes.html
qbs-resources/imports/: STM32BaseProduct.qbs~  STM32F4xxApplication.qbs  STM32F4xxApplication.qbs~  STM32F4xxProduct.qbs  STM32F4xxProduct.qbs~  STM32F4xxStaticLib.qbs  STM32F4xxStaticLib.qbs~
src/: absoluteencoder.h  adc.cpp  adc.h  adc030.cpp  adc030.h  adc303.cpp  adc303.h  analogservo.cpp  analogservo.h  application.cpp  application.h  as5040master.cpp  as5040master.h  button.cpp  button.h  buzzer.cpp  buzzer.h  can.cpp  can.h  can_old.cpp  can_old.h  caninterface.cpp  caninterface.h  cansocket.cpp  cansocket.h  compf3.cpp  compf3.h  cpuid.cpp  cpuid.h  dac.cpp  dac.h  dac37x.cpp  dac37x.h  dac4xx.h  dma.cpp  dma.h  dma0fxx.cpp  dma0fxx.h  dma303x8.cpp  dma303x8.h  (+81 more)
src/audio/: amicrophone.cpp  amicrophone.h  aspeaker.cpp  aspeaker.h  audiodev.cpp  audiodev.h  audioformat.h  i2smicrophone.cpp  i2smicrophone.h  microphone.cpp  microphone.h  sequencer.cpp  sequencer.h  speaker.cpp  speaker.h
src/canopen/: canopencommon.h  canopendevice.cpp  canopendevice.h  canopenlite.cpp  canopenlite.h  canopenmaster.cpp  canopenmaster.h  canopenproxy.cpp  canopenproxy.h  cia402dict.h  objdict.h
src/core/: advmath.cpp  advmath.h  application.cpp  application.h  bytearray.cpp  bytearray.h  closure.h  closure_impl.h  cmsis.h  core.cpp  core.h  coreexception.h  coretypes.h  coretypes.h.orig  device.cpp  device.h  macros.h  qdebug.cpp  qdebug.h  qquaternion.h  quaternion.cpp  quaternion.h  qvector3d.h  ringbuffer.h  sfs.cpp  sfs.h  (+2 more)
utils/: gen_sources.py
(+306 files in other folders)
